feat: automatic addition of users when creating a segment.
