# docs/swagger.json
@@ -14,12 +14,12 @@
                 "summary": "Creating a segment",
                 "parameters": [
                     {
-                        "description": "Segment slug",
+                        "description": "Segment",
                         "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_httpserver_handlers_segments_create.Request"
+                            "$ref": "#/definitions/segmentify_internal_models.Segment"
                         }
                     }
                 ],
@@ -27,7 +27,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/internal_httpserver_handlers_segments_create.Response"
+                            "$ref": "#/definitions/segmentify_internal_models.Segment"
                         }
                     },
                     "400": {
@@ -70,7 +70,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_httpserver_handlers_segments_get.Response"
+                            "$ref": "#/definitions/segmentify_internal_models.Segment"
                         }
                     },
                     "400": {
@@ -304,33 +304,6 @@
         }
     },
     "definitions": {
-        "internal_httpserver_handlers_segments_create.Request": {
-            "type": "object",
-            "required": [
-                "slug"
-            ],
-            "properties": {
-                "slug": {
-                    "type": "string"
-                }
-            }
-        },
-        "internal_httpserver_handlers_segments_create.Response": {
-            "type": "object",
-            "properties": {
-                "slug": {
-                    "type": "string"
-                }
-            }
-        },
-        "internal_httpserver_handlers_segments_get.Response": {
-            "type": "object",
-            "properties": {
-                "slug": {
-                    "type": "string"
-                }
-            }
-        },
         "internal_httpserver_handlers_users_create.Response": {
             "type": "object",
             "properties": {
@@ -378,6 +351,22 @@
             "type": "object",
             "properties": {
                 "detail": {
+                    "type": "string"
+                }
+            }
+        },
+        "segmentify_internal_models.Segment": {
+            "type": "object",
+            "required": [
+                "slug"
+            ],
+            "properties": {
+                "percent": {
+                    "type": "integer",
+                    "maximum": 100,
+                    "minimum": 0
+                },
+                "slug": {
                     "type": "string"
                 }
             }
