# internal/httpserver/handlers/segments/get/get.go
@@ -7,6 +7,7 @@ import (
 
 	"segmentify/internal/lib/logger/sl"
 	resp "segmentify/internal/lib/response"
+	"segmentify/internal/models"
 	"segmentify/internal/storage"
 
 	"github.com/go-chi/chi/v5"
@@ -14,18 +15,14 @@ import (
 	"github.com/go-chi/render"
 )
 
-type Response struct {
-	Slug string `json:"slug"`
-}
-
 type SegmentGetter interface {
-	GetSegment(slug string) (string, error)
+	GetSegment(slug string) (models.Segment, error)
 }
 
 // @Summary	Getting a segment
 // @Tags		segments
 // @Param		slug	path		string	true "Segment slug"
-// @Success	200		{object} Response
+// @Success	200		{object} models.Segment
 // @Failure	400		{object}	resp.ErrResponse
 // @Failure	404		{object}	resp.ErrResponse
 // @Failure	500		{object}	resp.ErrResponse
@@ -49,7 +46,7 @@ func New(log *slog.Logger, segmentGetter SegmentGetter) http.HandlerFunc {
 
 		log.Info("slug extracted from path", slog.String("slug", slug))
 
-		dbSlug, err := segmentGetter.GetSegment(slug)
+		dbSegment, err := segmentGetter.GetSegment(slug)
 		if err != nil {
 			if errors.Is(err, storage.ErrSegmentNotFound) {
 				log.Info("segment not found", slog.String("slug", slug))
@@ -63,9 +60,9 @@ func New(log *slog.Logger, segmentGetter SegmentGetter) http.HandlerFunc {
 			return
 		}
 
-		log.Info("segment received", slog.String("slug", dbSlug))
+		log.Info("segment received", slog.String("slug", dbSegment.Slug))
 
 		render.Status(r, http.StatusOK)
-		render.JSON(w, r, Response{Slug: dbSlug})
+		render.JSON(w, r, dbSegment)
 	}
 }
